[package]
name = "criterion-cbor"
version = "0.1.0"
edition = "2021"

[features]
# FIXME: Remove once we get closer to production
default = ["sqlite"]

# Enable re-exporting the measurement data as an SQLite database
sqlite = ["dep:rusqlite", "dep:thiserror"]

[dependencies]
chrono = { version = "0.4.39", default-features = false, features = ["clock", "serde", "std"] }
criterion = { version = "0.5.1", default-features = false }
rusqlite = { version = "0.33", optional = true }
serde = { version = "1.0.217", features = ["derive"] }
serde_cbor = "0.11.2"
thiserror = { version = "2.0.11", optional = true }
walkdir = "2.5.0"
